--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 node_modules/.cache/default-development/2.pack filter=lfs diff=lfs merge=lfs -text
 node_modules/.cache/default-development/0.pack filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/default-development/*.pack filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/*.pack filter=lfs diff=lfs merge=lfs -text
